| Summary: | ASTERISK-25709: ARI: Crash can occur due to race condition when attempting to operate on a hung up channel | ||||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |||
| Date Opened: | 2016-01-20 08:40:37.000-0600 | Date Closed: | 2016-01-23 10:10:42.000-0600 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_stasis | ||
| Versions: | Frequency of Occurrence | One Time | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | A crash was observed recently where an ARI setvar channel operation was attempted on a channel that had already been hung up and destroyed. Asterisk attempts to ensure this cannot happen, but if the setvar and hangup happen at around the same time, it is possible for this crash to occur. Looking into it further, it would appear that other channel operations besides setting a channel variable could lead to this same crash occurring. | ||||
| Comments: | |||||