Stasis: Prevent operations on hung-up channels.

When a channel enters Stasis, a stasis_app_control structure is created
and a pointer to the channel is added on that control. When the channel
exits Stasis, the control is removed from its container of controls and
presumably destroyed. Channel operations in Stasis happen on a separate
thread. The typical workflow is to grab a reference to the control
structure and then perform an operation on the control's channel.

The problem here is that there is a brief window where the thread
performing the channel operation can grab a reference to the control.
Then the channel can hang up, exit Stasis, and be freed. Then the thread
performing the channel opeation can attempt to perform the operation.
The problem here is that we're attempting an operation on a freed
channel, resulting in a crash.

This patch does two things in order to attempt to fix this
1) The control now has a reference to the channel instead of a bare
pointer. Since controls share ownership between threads, the contents of
those controls have to be treated the same way. With this change, we
will not allow for the channel to be freed out from under the control
structure.
2) When getting the control structure, we will attempt to see if the
channel has hung up. This can help to short-circuit operations that are
performed on hung-up channels, resulting in a 404 return instead of an
erroneous 200-class return.

ASTERISK-25709 #close
Reported by Mark Michelson

Change-Id: I3b114e6019a3ab9337098039a2a114f7accebb52